<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textNumInRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strNumInRow"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editNumInRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/strNumInRowEnter"
            android:inputType="numberSigned|textPersonName"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/textLengthOFSide"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="left"
            android:text="@string/strLenghtOfSide" />

        <EditText
            android:id="@+id/editLenghtOfSide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/strLenghtOfSideEnter"
            android:inputType="numberSigned|textPersonName"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/btnPlay"
            android:onClick="checkInputValues" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>