<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textAnnouncement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="false"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:text="@string/strAnnouncement"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textEndQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strEndQuestion"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="9dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="9dp">

            <Button
                android:id="@+id/btnAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/btnAgain"
                android:onClick="repeatGame"/>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/btnExit"
                android:onClick="exitGame"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>